# starting-ragchatbot-codebase

./: .gitignore  .pre-commit-config.yaml  .ruffignore  CLAUDE.md  DEVELOPMENT.md  README.md  frontend-changes.md  pyproject.toml  run.sh
backend/: ai_generator.py  app.py  document_processor.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: COMPLETE_REPORT.md  FINDINGS_AND_FIXES.md  FIX_SUMMARY.md  README.md  TEST_ANALYSIS.md  conftest.py  test_ai_generator.py  test_course_search_tool.py  test_rag_system.py  test_real_system.py  test_vector_store.py
docs/: architecture.md
frontend/: script.js  style.css
scripts/: format.sh  lint-fix.sh  lint.sh  quality-fix.sh  quality.sh
